fix broken links

--- a/index_desktop.html
+++ b/index_desktop.html
@@ -59,7 +59,7 @@
         </div>
         <div class="js-home-page home-page">
             <div class="inner">
-                <h1 class="js-tagLine">Resn is a Digital Experience Design Studio</h1>
+                <h1 class="js-tagLine">Devflovv is a Digital Experience Design Studio</h1>
             </div>
         </div>
         <div class="js-menu-page menu-page">
@@ -87,7 +87,7 @@
                 <div class="js-about__scroll">
                     <div class="js-about__title about__title" data-text-effect-id="abouttitle">
                         <div class="about__title_inner">
-                            <h2>Resn is a digital experience design studio. We help progressive brands engage with today’s connected customers.</h2>
+                            <h2>Devflovv is a digital experience design studio. We help progressive brands engage with today’s connected customers.</h2>
                         </div>
                     </div>
                     <div class="js-whoweare whoweare col2">
