--- a/index_mobile.html
+++ b/index_mobile.html
@@ -38,7 +38,7 @@
         </div>
         <div class="js-home-page home-page">
             <div class="inner">
-                <h1 class="js-tagLine">Resn is a Digital Experience Design Studio</h1></div>
+                <h1 class="js-tagLine">Devflovv is a Digital Experience Design Studio</h1></div>
         </div>
         <div class="js-menu-page menu-page">
             <nav class="js-menu menu">
