--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="theme-color" content="#000000">
 
-	<title>Resn. Infecting your screen for your enjoyment.</title>
-	<meta name="description" content="Resn is a creative digital agency infecting minds with gooey interactive experiences and digital stories." />
+	<title>Devflovv. Imagination Engineered.</title>
+	<meta name="description" content="Devflovv is a creative digital agency infecting minds with gooey interactive experiences and digital stories." />
 	<meta name="keywords" content="" />
 	
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-	<meta property="og:title" content="Resn" />
-	<meta property="og:description" content="Resn is a creative digital agency infecting minds with gooey interactive experiences and digital stories." />
+	<meta property="og:title" content="Devflovv" />
+	<meta property="og:description" content="Devflovv is a creative digital agency infecting minds with gooey interactive experiences and digital stories." />
 	<meta property="og:image" content="https://playday3008.github.io/Resn/resn-share.jpg?bar=2" />
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://playday3008.github.io/Resn" />
@@ -29,8 +29,8 @@
 	<meta name="twitter:image" content="https://playday3008.github.io/Resn/resn-share.jpg?bar=2">
 
 	<!-- Schema.org markup for Google+ -->
-	<meta itemprop="name" content="Resn">
-	<meta itemprop="description" content="Resn is a creative digital agency infecting minds with gooey interactive experiences and digital stories.">
+	<meta itemprop="name" content="Devflovv">
+	<meta itemprop="description" content="Devflovv is a creative digital agency infecting minds with gooey interactive experiences and digital stories.">
 	<meta itemprop="image" content="https://playday3008.github.io/Resn/resn-share.jpg?bar=2">
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
