Added Projects title and Images

--- a/index_desktop.html
+++ b/index_desktop.html
@@ -93,7 +93,7 @@
                     <div class="js-whoweare whoweare col2">
                         <h3>We Amaze and Engage</h3>
                         <div class="js-whoweare_inner whoweare_inner inner right" data-text-effect-id="whoweare">
-                            <p>We make innovative web and mobile experiences that customers love. Our award-winning user experience and interface design teams are experts at delivering deep engagement with your brand. We call this the Resn effect.</p>
+                            <p>We make innovative web and mobile experiences that customers love. Our award-winning user experience and interface design teams are experts at delivering deep engagement with your brand. We call this the Devflovv effect.</p>
                         </div>
                     </div>
                     <div class="js-ourapproach ourapproach col2">
@@ -171,13 +171,13 @@
                     <div class="js-whatweoffer whatweoffer col2">
                         <h3>Where We Are</h3>
                         <div class="js-whatweoffer_inner whatweoffer_inner inner right">
-                            <p>Resn has studios in Amsterdam, Netherlands and Wellington, New Zealand. From here we collaborate with leading brands across the world.</p>
+                            <p>Devflovv has studios in Amsterdam, Netherlands and Wellington, New Zealand. From here we collaborate with leading brands across the world.</p>
                         </div>
                     </div>
                     <div class="js-about__stats about__stats col2">
                         <h3>What we've won</h3>
                         <div class="stats__inner inner right">
-                            <p>Resn’s work has been recognised at the highest levels, winning more than 300 international awards including some of the most prestigious in the industry. Resn has twice won Awwwards Agency of the Year, has been named CSS Design Awards Agency of the Year, is a member of the FWA Hall of Fame and FWA Club 100, and has been included on Advertising Age’s Production Company A-List. Resn’s work has won numerous Cannes Lions, Webby Awards, One Show, D &amp;ADs, and Best Awards. Highlights include a Cannes Lions Titanium, three Cannes Lion Grand Prix, One Show Best in Discipline, and the DINZ John Britten Black Pin which is awarded for leadership, vision and achievement in New Zealand and internationally.</p>
+                            <p>Devflovv’s work has been recognised at the highest levels, winning more than 300 international awards including some of the most prestigious in the industry. Devflovv has twice won Awwwards Agency of the Year, has been named CSS Design Awards Agency of the Year, is a member of the FWA Hall of Fame and FWA Club 100, and has been included on Advertising Age’s Production Company A-List. Devflovv’s work has won numerous Cannes Lions, Webby Awards, One Show, D &amp;ADs, and Best Awards. Highlights include a Cannes Lions Titanium, three Cannes Lion Grand Prix, One Show Best in Discipline, and the DINZ John Britten Black Pin which is awarded for leadership, vision and achievement in New Zealand and internationally.</p>
                             <div class="awards">
                                 <div class="stats__block fwa">
                                     <span class="number">121</span>
@@ -222,8 +222,8 @@
                         <h3>We're hiring!</h3>
                         <div class="js-werehiring_inner werehiring_inner inner right">
                             <p>
-                                Want to work at Resn? Of course you do! Find your future career on <br/>
-                                our <a target="_blank" href="http://resn.theresumator.com/">job board</a>
+                                Want to work at Devflovv? Of course you do! Find your future career on <br/>
+                                our <a target="_blank" href="https://devflovv.com/">job board</a>
                                 .
                             </p>
                         </div>
@@ -287,7 +287,7 @@
                     <div class="contact__email__hiring">
                         <p class="hiring">
                             <span class="part2">We're hiring: </span>
-                            <a class="mailLink mailLink2" href="http://resn.theresumator.com/" target="_blank">
+                            <a class="mailLink mailLink2" href="https://devflovv.com/" target="_blank">
                                 <span class="part1 headingSplit">view positions here</span>
                                 <span class="headingAll">view positions here</span>
                                 <span class="underline animate"></span>
@@ -296,20 +296,20 @@
                         </p>
                         <p class="hello">
                             <span class="part2">Get in touch: </span>
-                            <a class="mailLink mailLink1" href="mailto:hello@resn.co.nz">
+                            <a class="mailLink mailLink1" href="mailto:hello@Devflovv.co.nz">
                                 <span class="part1 headingSplit">hello</span>
-                                <span class="part3 headingSplit">@resn.co.nz</span>
-                                <span class="headingAll">hello@resn.co.nz</span>
+                                <span class="part3 headingSplit">@Devflovv.co.nz</span>
+                                <span class="headingAll">hello@Devflovv.co.nz</span>
                                 <span class="underline animate"></span>
                                 <span class="underline fade"></span>
                             </a>
                         </p>
                         <p class="newbiz">
                             <span class="part2">Work with us: </span>
-                            <a class="mailLink mailLink2" href="mailto:newbusiness@resn.co.nz">
+                            <a class="mailLink mailLink2" href="mailto:newbusiness@Devflovv.co.nz">
                                 <span class="part1 headingSplit">newbusiness</span>
-                                <span class="part3 headingSplit">@resn.co.nz</span>
-                                <span class="headingAll">newbusiness@resn.co.nz</span>
+                                <span class="part3 headingSplit">@Devflovv.co.nz</span>
+                                <span class="headingAll">newbusiness@Devflovv.co.nz</span>
                                 <span class="underline animate"></span>
                                 <span class="underline fade"></span>
                             </a>
@@ -320,7 +320,7 @@
                     <div class="contact__address js-wellingtion-contact1" data-text-effect-id="contactwelli">
                         <h3>WELLINGTON</h3>
                         <p class="contact__address-phone">+64 4 385 0705</p>
-                        <a target="_blank" href="https://www.google.nl/maps/place/Resn/@-41.2903055,174.7755511,17z/data=!3m1!4b1!4m2!3m1!1s0x6d38afd8174c2ebf:0x1def92b395560a56">
+                        <a target="_blank" href="https://www.google.nl/maps/place/Devflovv/@-41.2903055,174.7755511,17z/data=!3m1!4b1!4m2!3m1!1s0x6d38afd8174c2ebf:0x1def92b395560a56">
                             <p class="contact__address-street">
                                 Level 7, Anvil House<br/>
                                 138 Wakefield Street<br/>
@@ -335,12 +335,11 @@
                     <div class="contact__address js-wellingtion-contact2" data-text-effect-id="contactdam">
                         <h3>AMSTERDAM</h3>
                         <p class="contact__address-phone">+31 20 2610299</p>
-                        <a target="_blank" href="https://www.google.nl/maps/place/Resn+Europe+Limited/@52.3840117,4.8572254,15z/data=!4m5!1m2!2m1!1sresn+amsterdam!3m1!1s0x47c609c3b4bf23bb:0x8a32724b58b86d01">
+                        <a target="_blank" href="https://www.google.nl/maps/place/Devflovv+Europe+Limited/@52.3840117,4.8572254,15z/data=!4m5!1m2!2m1!1sDevflovv+amsterdam!3m1!1s0x47c609c3b4bf23bb:0x8a32724b58b86d01">
                             <p class="contact__address-street">
-                                Keizersgracht 174-1<br/>
-                                1016 DW<br/>
-                                Amsterdam<br/>
-                                Netherlands
+                                Milton,<br/>
+                                Ontario<br/>
+                                Canada<br/>
                                 <span class="contact__address-map">
                                     <img class="address-image" src="./assets/img/contact_map_icon_.png"/>
                                 </span>
@@ -350,22 +349,22 @@
                     <div class="contact__social js-contact__social" data-text-effect-id="contactsocial">
                         <h3>SOCIAL</h3>
                         <p class="contact_link first">
-                            <a target="_blank" href="https://twitter.com/resn_has_no_i">
+                            <a target="_blank" href="https://twitter.com/Devflovv_has_no_i">
                                 <img class="contact-image" src="./assets/img/contact_line.png"/>Twitter
                             </a>
                         </p>
                         <p class="contact_link">
-                            <a target="_blank" href="https://www.facebook.com/resnglobal/">
+                            <a target="_blank" href="https://www.facebook.com/Devflovvglobal/">
                                 <img class="contact-image" src="./assets/img/contact_line.png"/>Facebook
                             </a>
                         </p>
                         <p class="contact_link">
-                            <a target="_blank" href="https://www.linkedin.com/company/resn_2">
+                            <a target="_blank" href="https://www.linkedin.com/company/Devflovv_2">
                                 <img class="contact-image" src="./assets/img/contact_line.png"/>LinkedIn
                             </a>
                         </p>
                         <p class="contact_link">
-                            <a target="_blank" href="https://www.instagram.com/resn_has_no_i/">
+                            <a target="_blank" href="https://www.instagram.com/Devflovv_has_no_i/">
                                 <img class="contact-image" src="./assets/img/contact_line.png"/>Instagram
                             </a>
                         </p>
