--- a/index_mobile.html
+++ b/index_mobile.html
@@ -54,10 +54,10 @@
             </div>
             <div class="about__inner">
                 <div class="js-about__title about__title">
-                    <h2>Resn is a digital experience design studio. We help progressive brands engage with today’s connected customers.</h2></div>
+                    <h2>Devflovv is a digital experience design studio. We help progressive brands engage with today’s connected customers.</h2></div>
                 <div class="js-about__block about__block">
                     <h3>We Amaze and Engage</h3>
-                    <p>We make innovative web and mobile experiences that customers love. Our award-winning user experience and interface design teams are experts at delivering deep engagement with your brand. We call this the Resn effect.</p>
+                    <p>We make innovative web and mobile experiences that customers love. Our award-winning user experience and interface design teams are experts at delivering deep engagement with your brand. We call this the Devflovv effect.</p>
                 </div>
                 <div class="js-about__block about__block">
                     <h3>Our Approach</h3>
@@ -97,11 +97,11 @@
                 </div>
                 <div class="js-about__block about__block">
                     <h3>Where We Are</h3>
-                    <p>Resn has studios in Amsterdam, Netherlands and Wellington, New Zealand. From here we collaborate with leading brands across the world.</p>
+                    <p>Devflovv has office in Milton, Ontario, Canada. From here we collaborate with leading brands across the world.</p>
                 </div>
                 <div class="js-about__block about__block">
                     <h3>What we've won</h3>
-                    <p>Resn’s work has been recognised at the highest levels, winning more than 300 international awards including some of the most prestigious in the industry. Resn has twice won Awwwards Agency of the Year, has been named CSS Design Awards Agency of the Year, is a member of the FWA Hall of Fame and FWA Club 100, and has been included on Advertising Age’s Production Company A-List. Resn’s work has won numerous Cannes Lions, Webby Awards, One Show, D&amp;ADs, and Best Awards. Highlights include a Cannes Lions Titanium, three Cannes Lion Grand Prix, One Show Best in Discipline, and the DINZ John Britten Black Pin which is awarded for leadership, vision and achievement in New Zealand and internationally.</p>
+                    <p>Devflovv’s work has been recognised at the highest levels, winning more than 300 international awards including some of the most prestigious in the industry. Devflovv has twice won Awwwards Agency of the Year, has been named CSS Design Awards Agency of the Year, is a member of the FWA Hall of Fame and FWA Club 100, and has been included on Advertising Age’s Production Company A-List. Devflovv’s work has won numerous Cannes Lions, Webby Awards, One Show, D&amp;ADs, and Best Awards. Highlights include a Cannes Lions Titanium, three Cannes Lion Grand Prix, One Show Best in Discipline, and the DINZ John Britten Black Pin which is awarded for leadership, vision and achievement in New Zealand and internationally.</p>
                     <div class="about__awards">
                         <div class="stats__block fwa"><span class="number">121</span>
                             <div class="award-wrap">
@@ -137,7 +137,7 @@
                 </div>
                 <div class="js-about__block about__block">
                     <h3>We're hiring!</h3>
-                    <p>Want to work at Resn? Of course you do! Find your future career on our <a target="_blank" href="http://resn.theresumator.com/" class="js-about__werehiring-link">job board</a>.</p>
+                    <p>Want to work at Devflovv? Of course you do! Find your future career on our <a target="_blank" href="http://Devflovv.theresumator.com/" class="js-about__werehiring-link">job board</a>.</p>
                 </div>
             </div>
         </div>
@@ -201,17 +201,17 @@
             </div>
             <div class="contact__inner">
                 <div class="contact__email js-contact-email">
-                    <p class="hiring"><span class="part2">We're hiring: </span><a class="mailLink" href="http://resn.theresumator.com/" target="_blank"><span class="part2 headingSplit">view positions here</span></a></p>
-                    <p class="hello"><span class="part2">Get in touch: </span><a class="mailLink" href="mailto:hello@resn.co.nz"><span class="part1 headingSplit">hello</span><span class="part2 headingSplit">@resn.co.nz</span></a></p>
-                    <p class="newbiz"><span class="part2">Work with us: </span><a class="mailLink" href="mailto:newbusiness@resn.co.nz"><span class="part2 headingSplit">newbusiness@resn.co.nz</span></a></p>
+                    <p class="hiring"><span class="part2">We're hiring: </span><a class="mailLink" href="http://Devflovv.theresumator.com/" target="_blank"><span class="part2 headingSplit">view positions here</span></a></p>
+                    <p class="hello"><span class="part2">Get in touch: </span><a class="mailLink" href="mailto:info@devflovv.com"><span class="part1 headingSplit">hello</span><span class="part2 headingSplit">@Devflovv.co.nz</span></a></p>
+                    <p class="newbiz"><span class="part2">Work with us: </span><a class="mailLink" href="mailto:info@devflovv.com"><span class="part2 headingSplit">newbusiness@Devflovv.co.nz</span></a></p>
                 </div>
                 <div class="contact__other">
                     <div class="contact__social js-contact__social">
                         <div class="contact__social-icons">
-                            <p class="contact_link first"><a href="https://twitter.com/resn_has_no_i" target="_blank">Twitter</a></p>
-                            <p class="contact_link"><a href="https://www.facebook.com/Resn-352687790955" target="_blank">Facebook</a></p>
-                            <p class="contact_link"><a href="https://www.linkedin.com/company/resn_2" target="_blank">LinkedIn</a></p>
-                            <p class="contact_link"><a href="https://www.instagram.com/resn_has_no_i/" target="_blank">Instagram</a></p>
+                            <p class="contact_link first"><a href="https://www.instagram.com/devflovv_official" target="_blank">Twitter</a></p>
+                            <p class="contact_link"><a href="https://www.instagram.com/devflovv_official" target="_blank">Facebook</a></p>
+                            <p class="contact_link"><a href="https://www.instagram.com/devflovv_official" target="_blank">LinkedIn</a></p>
+                            <p class="contact_link"><a href="https://www.instagram.com/devflovv_official" target="_blank">Instagram</a></p>
                         </div>
                         <div class="js-newsletter newsletter__wrapper">
                             <a class="js-newsletter__link newsletter__link"><img class="contact-image" src="assets/img/contact_arrow.png" />Subscribe to Newsletter</a>
@@ -238,12 +238,12 @@
                         <div class="contact__address js-wellingtion-contact">
                             <h3>Wellington</h3>
                             <p class="contact__address-phone"><a href="tel:+6443850705">+64 4 385 0705</a></p>
-                            <p class="contact__address-street"><a target="_blank" href="https://www.google.nl/maps/place/Resn/@-41.2903055,174.7755511,17z/data=!3m1!4b1!4m2!3m1!1s0x6d38afd8174c2ebf:0x1def92b395560a56">Level 7, Anvil House<br />138 Wakefield Street<br />Wellington<br />New Zealand</a></p>
+                            <p class="contact__address-street"><a target="_blank" href="https://www.google.nl/maps/place/Devflovv/@-41.2903055,174.7755511,17z/data=!3m1!4b1!4m2!3m1!1s0x6d38afd8174c2ebf:0x1def92b395560a56">Level 7, Anvil House<br />138 Wakefield Street<br />Wellington<br />New Zealand</a></p>
                         </div>
                         <div class="contact__address js-wellingtion-contact2">
                             <h3>Amsterdam</h3>
                             <p class="contact__address-phone"><a href="tel:+31202610299">+31 20 2610299</a></p>
-                            <p class="contact__address-street"><a target="_blank" href="https://www.google.nl/maps/place/Resn+Europe+Limited/@52.3840117,4.8572254,15z/data=!4m5!1m2!2m1!1sresn+amsterdam!3m1!1s0x47c609c3b4bf23bb:0x8a32724b58b86d01">Keizersgracht 174-1<br />1016 DW<br />Amsterdam<br />Netherlands</a></p>
+                            <p class="contact__address-street"><a target="_blank" href="https://www.google.nl/maps/place/Devflovv+Europe+Limited/@52.3840117,4.8572254,15z/data=!4m5!1m2!2m1!1sDevflovv+amsterdam!3m1!1s0x47c609c3b4bf23bb:0x8a32724b58b86d01">Keizersgracht 174-1<br />1016 DW<br />Amsterdam<br />Netherlands</a></p>
                         </div>
                     </div>
                 </div>
