removed the accordian playing on resize

--- a/index_desktop.html
+++ b/index_desktop.html
@@ -318,14 +318,13 @@
                 </div>
                 <div class="contact__other">
                     <div class="contact__address js-wellingtion-contact1" data-text-effect-id="contactwelli">
-                        <h3>WELLINGTON</h3>
+                        <h3>Canada</h3>
                         <p class="contact__address-phone">+64 4 385 0705</p>
                         <a target="_blank" href="https://www.google.nl/maps/place/Devflovv/@-41.2903055,174.7755511,17z/data=!3m1!4b1!4m2!3m1!1s0x6d38afd8174c2ebf:0x1def92b395560a56">
                             <p class="contact__address-street">
-                                Level 7, Anvil House<br/>
-                                138 Wakefield Street<br/>
-                                Wellington<br/>
-                                New Zealand
+                                Milton<br/>
+                                Ontario<br/>
+                                Candad<br/>
                                 <span class="contact__address-map">
                                     <img class="address-image" src="./assets/img/contact_map_icon_.png"/>
                                 </span>
@@ -333,7 +332,7 @@
                         </a>
                     </div>
                     <div class="contact__address js-wellingtion-contact2" data-text-effect-id="contactdam">
-                        <h3>AMSTERDAM</h3>
+                        <h3>Canada</h3>
                         <p class="contact__address-phone">+31 20 2610299</p>
                         <a target="_blank" href="https://www.google.nl/maps/place/Devflovv+Europe+Limited/@52.3840117,4.8572254,15z/data=!4m5!1m2!2m1!1sDevflovv+amsterdam!3m1!1s0x47c609c3b4bf23bb:0x8a32724b58b86d01">
                             <p class="contact__address-street">
