--- a/index_mobile.html
+++ b/index_mobile.html
@@ -236,14 +236,14 @@
                     </div>
                     <div class="contact__addresses">
                         <div class="contact__address js-wellingtion-contact">
-                            <h3>Wellington</h3>
+                            <h3>Canada</h3>
                             <p class="contact__address-phone"><a href="tel:+6443850705">+64 4 385 0705</a></p>
-                            <p class="contact__address-street"><a target="_blank" href="https://www.google.nl/maps/place/Devflovv/@-41.2903055,174.7755511,17z/data=!3m1!4b1!4m2!3m1!1s0x6d38afd8174c2ebf:0x1def92b395560a56">Level 7, Anvil House<br />138 Wakefield Street<br />Wellington<br />New Zealand</a></p>
+                            <p class="contact__address-street"><a target="_blank" href="https://www.google.nl/maps/place/Devflovv/@-41.2903055,174.7755511,17z/data=!3m1!4b1!4m2!3m1!1s0x6d38afd8174c2ebf:0x1def92b395560a56">Milton<br />Ontario<br />Canada</a></p>
                         </div>
                         <div class="contact__address js-wellingtion-contact2">
-                            <h3>Amsterdam</h3>
+                            <h3>Canada</h3>
                             <p class="contact__address-phone"><a href="tel:+31202610299">+31 20 2610299</a></p>
-                            <p class="contact__address-street"><a target="_blank" href="https://www.google.nl/maps/place/Devflovv+Europe+Limited/@52.3840117,4.8572254,15z/data=!4m5!1m2!2m1!1sDevflovv+amsterdam!3m1!1s0x47c609c3b4bf23bb:0x8a32724b58b86d01">Keizersgracht 174-1<br />1016 DW<br />Amsterdam<br />Netherlands</a></p>
+                            <p class="contact__address-street"><a target="_blank" href="https://www.google.nl/maps/place/Devflovv+Europe+Limited/@52.3840117,4.8572254,15z/data=!4m5!1m2!2m1!1sDevflovv+amsterdam!3m1!1s0x47c609c3b4bf23bb:0x8a32724b58b86d01">Milton<br />Ontario<br />Canada</a></p>
                         </div>
                     </div>
                 </div>
