disabled audio on/off functionality

--- a/index_desktop.html
+++ b/index_desktop.html
@@ -20,9 +20,9 @@
             <span class="js-button__text button__text">Showreel</span>
         </div>
         <div class="js-shell__button--sound shell__button--sound shell__button">
-            <div class="button__hitarea"></div>
-            <div class="js-button__icon button__icon"></div>
-            <span class="js-button__text button__text">Audio</span>
+            <!-- <div class="button__hitarea"></div> -->
+            <!-- <div class="js-button__icon button__icon"></div> -->
+            <!-- <span class="js-button__text button__text">Audio</span> -->
         </div>
         <div class="js-shell__overlay shell__overlay">
             <div class="js-shell__close shell__close"></div>
@@ -223,7 +223,7 @@
                         <div class="js-werehiring_inner werehiring_inner inner right">
                             <p>
                                 Want to work at Devflovv? Of course you do! Find your future career on <br/>
-                                our <a target="_blank" href="https://devflovv.com/">job board</a>
+                                our <a target="_blank" href="https://devflovv.com/careers-at-devflovv">job board</a>
                                 .
                             </p>
                         </div>
